Update api schema and implement shop owner mobile views
